# python-ai

./: .gitignore  pyproject.toml  requirements.txt
cmd/: check_HF_info.py
cmd/inference_service/: inference_service.py
hello_inference/: inference.py  inference_pipieline.py  inference_with_tools.py
hello_training/: training.py  training_CPT.py  training_SFT.py  training_simple.py
pkg/: hello_ai.py  hello_ai_with_XX.py  hello_ai_with_embedding_matrix.py
