[project]
name = "python-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 加速器，用于在 GPU 上运行模型。device_map="auto" 参数的依赖包
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ipywidgets>=8.1.8",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "torchvision>=0.26.0",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
