[project]
name = "python-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 数值计算
    "numpy>=2.3.1",
    # PyTroch 框架及其扩展
    "torch>=2.7.1",
    "torchvision>=0.26.0",
    # Hugging Face 数据集库，用于加载和处理数据集
    "datasets>=4.8.4",
    # Hugging Face 模型库，用于加载和使用预训练模型
    "transformers>=5.3.0",
    # 加速器，用于在 GPU 上运行模型。device_map="auto" 参数的依赖包
    "accelerate>=1.13.0",
    # 用于在 Jupyter Notebook 中使用交互式小部件。e.g. transformers 下载进度条
    "ipywidgets>=8.1.8",
    # 用于构建 API 接口
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    # 下面两个依赖供 convert_hf_to_gguf.py 使用。
    # 在 tool.uv.sources 中把 gguf 依赖的来源改到本地的 llama.cpp 项目
    "gguf>=0.18.0",
    "sentencepiece>=0.2.1",
]

[tool.uv]
link-mode = "hardlink"

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
gguf = { path = "../../../projects/someone_else/llama.cpp/gguf-py" }
